[package]
name = "threebug-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_spicy_networking = { path = "../../vendor/bevy_spicy_networking" }

chrono = { version = "0.4", features = [ "serde" ] }
serde = "1"
typetag = "0.2.3"
parry3d = { version = "0.12", features = ["serde-serialize"] }
