[package]
name = "threebug-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.9.1"

threebug-core = { path = "../threebug-core" }

bevy_spicy_networking = { path = "../../vendor/bevy_spicy_networking" }
# bevy_spicy_networking = { git = "https://github.com/nhemsley/bevy_spicy_networking.git" }

parry3d = { version = "0.12", features = ["serde-serialize"] }

# tracing = "0.1"
# tracing-subscriber = "0.2"

# structopt = { version = "0.3", default-features = false }
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras.git" }
bevy_egui = "0.18.0"
indexmap = "1.7.0"
bevy-inspector-egui = "0.15.0"


